--- a/environment.yml
+++ b/environment.yml
@@ -7,10 +7,10 @@ dependencies:
   - expat=2.7.1=h8ddb27b_0
   - libffi=3.4.4=hd77b12b_1
   - libzlib=1.3.1=h02ab6af_0
-  - openssl=3.0.17=h35632f6_0
-  - pip=25.2=pyhc872135_0
+  - openssl=3.0.18=h543e019_0
+  - pip=25.2=pyhc872135_1
   - python=3.11.13=h981015d_0
-  - setuptools=78.1.1=py311haa95532_0
+  - setuptools=80.9.0=py311haa95532_0
   - sqlite=3.50.2=hda9a48d_1
   - tk=8.6.15=hf199647_0
   - tzdata=2025b=h04d1e81_0
