--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,25 @@
-[project]
+[tool.poetry]
 name = "iasa-computer-vision"
 version = "0.1.0"
-description = "Labs for the IASA Computer Vision course."
-authors = [
-    {name = "Mariia Dodonova",email = "maridodonova@gmail.com"}
-]
+description = ""
+authors = ["Mariia Dodonova <maridodonova@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.11,<3.14"
-dependencies = [
-    "numpy (==2.2.4)",
-    "matplotlib (>=3.10.6,<4.0.0)",
-    "opencv-python (>=4.12.0.88,<5.0.0.0)",
-    "notebook (>=7.4.5,<8.0.0)",
-    "ipykernel (>=6.30.1,<7.0.0)"
-]
+
+[tool.poetry.dependencies]
+python = ">=3.11,<3.15"
+numpy = "<2.3.0"
+matplotlib = "^3.10.7"
+opencv-python = "^4.12.0.88"
+torch = {version = "^2.9.0+cu130", source = "pytorch-gpu"}
+ipykernel = "^7.0.1"
+torchvision = "^0.24.0"
 
 
-[tool.poetry]
-package-mode = false
-
+[[tool.poetry.source]]
+name = "pytorch-gpu"
+url = "https://download.pytorch.org/whl/cu130"
+priority = "explicit"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
