--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "iasa-computer-vision"
 version = "0.1.0"
-description = ""
+description = "Labs for the IASA Computer Vision Course."
 authors = ["Mariia Dodonova <maridodonova@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.15"
